--- a/FundamentosHTML_Hector_Latorre/index.html
+++ b/FundamentosHTML_Hector_Latorre/index.html
@@ -24,7 +24,7 @@
               <li ><strong>Fecha de Nacimiento :</strong> 31/01/1989</li>
               <li ><strong>Lugar de Nacimiento :</strong> Piura - Peru</li>
           </ul>
-          <h3>Informacion del Perfil</h3>
+          <h3>Informaci&ocouten del Perfil</h3>
           <ul>
             <li><strong>Perfil :</strong> Analista Comercial</li>
             <li><strong>Idiomas :</strong> Español</li>
