--- a/FundamentosHTML_Hector_Latorre/experiencia.html
+++ b/FundamentosHTML_Hector_Latorre/experiencia.html
@@ -36,6 +36,12 @@
         <h4>Audio de explicacion</h4>
       </p>
     </header>
-    
+    <footer>
+        <h4>@Derechos Reservados</h4>
+        <ul>
+          <li><strong>Correo :</strong> <a href="mailto:gooper@gmail.com">gooper@gmail.com</a></li>
+          <li><strong>Celular :</strong> 9798548452</li>
+        </ul>
+    </footer>
   </body>
 </html>
